[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
clap = { version = "4.2.1", features = ["derive"] }
owo-colors = "3"
thiserror = "1.0.40"
tempfile = "3.5.0"
phf = { version = "0.11.2", features = ["macros"] }
